修改文档链接

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <li>
             <a href="./src/tab/tab.html" target=_blank>tab组件效果</a>
             <a href="https://github.com/ziwei3749/ui-wheels/tree/master/src/tab" target=_blank>tab源代码</a>
-            <a href="https://github.com/ziwei3749/ui-wheels/blob/master/src/tab/tab%E7%BB%84%E4%BB%B6%E4%BD%BF%E7%94%A8%E4%B8%8E%E5%B0%81%E8%A3%85%E6%96%87%E6%A1%A3.md" target=_blank>tab组件封装思路总结</a>
+            <a href="./blob/master./src/tab/tab组件使用与封装文档.md" target=_blank>tab组件封装思路总结</a>
         </li>
         <li>
             <a href="./src/dialog/dialog.html" target=_blank>dialog组件效果</a>
             <a href="https://github.com/ziwei3749/ui-wheels/tree/master/src/dialog" target=_blank>dialog源代码</a>
-            <a href="https://github.com/ziwei3749/ui-wheels/blob/master/src/dialog/dialog%E7%BB%84%E4%BB%B6%E4%BD%BF%E7%94%A8%E4%B8%8E%E5%B0%81%E8%A3%85%E6%96%87%E6%A1%A3.md" target=_blank>dialog组件封装思路总结</a>
+            <a href="./blob/master./src/dialog组件使用与封装文档/dialog组件使用与封装文档.md" target=_blank>dialog组件封装思路总结</a>
         </li>
     </ul>
 
