--- a/src/dialog/dialog.html
+++ b/src/dialog/dialog.html
@@ -12,8 +12,8 @@
 <button class="btn">打开dialog</button>
 
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<script src="./dialog_class.js"></script>
-<!--<script src="./dialog.js"></script>-->
+<script src="./dialog.js"></script>
+
 <script>
 
     $('.btn').click('on', function () {
