--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <a href="https://github.com/ziwei3749/ui-wheels/tree/master/src/dialog" target=_blank>dialog源代码</a>
             <a href="https://github.com/ziwei3749/ui-wheels/blob/master/src/dialog/dialog%E7%BB%84%E4%BB%B6%E4%BD%BF%E7%94%A8%E4%B8%8E%E5%B0%81%E8%A3%85%E6%96%87%E6%A1%A3.md" target=_blank>dialog组件封装思路总结</a>
         </li>
+        <li>
+            <a href="./src/slide/slide.html" target=_blank>slide组件效果</a>
+            <a href="https://github.com/ziwei3749/ui-wheels/tree/master/src/slide" target=_blank>slide源代码</a>
+            <a href="https://github.com/ziwei3749/ui-wheels/blob/master/src/slide/slide%E7%BB%84%E4%BB%B6%E4%BD%BF%E7%94%A8%E4%B8%8E%E5%B0%81%E8%A3%85%E6%96%87%E6%A1%A3.md" target=_blank>dialog组件封装思路总结</a>
+        </li>
     </ul>
 
 </body>
