--- a/src/slide/slide.html
+++ b/src/slide/slide.html
@@ -40,13 +40,12 @@
      * arrow : 是否显示箭头
      *
      *
-     * 实例拥有的的方法
+     * 实例的方法
      * slide.go(2)   : 跳到到某一页
      * slide.next()  : 跳到下一页
      * slide.prev()  : 跳到前一页
      * slide.play()  : 自动轮播
      * slide.stop()  : 停止轮播
-     *
      */
     var slide = new Slide({
         element: '.slide',
