page分页基本完成，还存在bug未修复

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <a href="https://github.com/ziwei3749/ui-wheels/tree/master/src/slide" target=_blank>slide源代码</a>
             <a href="https://github.com/ziwei3749/ui-wheels/blob/master/src/slide/slide%E7%BB%84%E4%BB%B6%E4%BD%BF%E7%94%A8%E4%B8%8E%E5%B0%81%E8%A3%85%E6%96%87%E6%A1%A3.md" target=_blank>dialog组件封装思路总结</a>
         </li>
+        <li>
+            <a href="./src/page/page.html" target=_blank>page组件效果</a>
+            <a href="https://github.com/ziwei3749/ui-wheels/tree/master/src/page" target=_blank>page源代码</a>
+            <!--<a href="https://github.com/ziwei3749/ui-wheels/blob/master/src/slide/slide%E7%BB%84%E4%BB%B6%E4%BD%BF%E7%94%A8%E4%B8%8E%E5%B0%81%E8%A3%85%E6%96%87%E6%A1%A3.md" target=_blank>dialog组件封装思路总结</a>-->
+        </li>
     </ul>
 
 </body>
